lesson27_postgresql/roles/ntpd/files/firewall.conf
*filter
:INPUT DROP [2:58]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -s 192.168.168.64/26 -d 192.168.168.64/26 -p udp -m udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -d 192.168.168.64/26 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 192.168.168.64/26 -d 192.168.168.64/26 -p tcp -m tcp --dport 19532 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 192.168.168.64/26 -d 192.168.168.64/26 -p tcp -m tcp --dport 514 -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -p udp -m udp --sport 32768:61000 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 32768:61000 -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m udp --sport 123 --dport 123 -m conntrack --ctstate NEW -j ACCEPT
COMMIT
